Added sonar for code quality control.